# uvg

./: .gitignore  Architecture.md  CHANGELOG.md  CompetitiveAnalysis.md  Contributing.md  DatabaseArchitecture.md  FeasibilityReport.md  Governance.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Milestones.md  README.md  ReleasePlan.md  Roadmap.md  RuntimeArchitecture.md  SecurityArchitecture.md  StoreArchitecture.md  Vision.md  agent.md  gitagent.md  pyproject.toml  skill.md
.github/workflows/: ci.yml  publish.yml
adr/: README.md
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: robots.txt
docs/src/assets/: custom.css
docs/src/content/docs/: index.mdx
docs/src/content/docs/architecture/: database.mdx  overview.mdx  runtime.mdx  security.mdx  store.mdx  uv-integration.mdx
docs/src/content/docs/cli/: add.mdx  doctor.mdx  info.mdx  init.mdx  overview.mdx  remove.mdx  run.mdx  scan.mdx  stats.mdx  store.mdx  sync.mdx  verify.mdx  workspace.mdx
docs/src/content/docs/concepts/: fingerprinting.mdx  isolation.mdx  package-identity.mdx  runtime.mdx  store.mdx
docs/src/content/docs/config/: env.mdx  file.mdx  store-location.mdx  uv-config.mdx
docs/src/content/docs/contributing/: governance.mdx  index.mdx
docs/src/content/docs/getting-started/: installation.mdx  introduction.mdx  quick-start.mdx  why-uvg.mdx
docs/src/content/docs/guides/: ci-cd.mdx  migration.mdx  offline.mdx  performance.mdx  registries.mdx  tools-scripts.mdx  workspace.mdx
docs/src/content/docs/use-cases/: data-science.mdx  edge.mdx  microservices.mdx  monorepo.mdx  multi-python.mdx  reproducible-builds.mdx
src/gvx/: __init__.py
src/gvx/auth/: config.py
src/gvx/cli/: __init__.py  export_import.py  main.py  workspace.py
src/gvx/core/: __init__.py  exceptions.py  models.py
src/gvx/intelligence/: __init__.py  analyzer.py  scanner.py
src/gvx/python/: manager.py
src/gvx/runtime/: __init__.py  builder.py  fingerprint.py  manifest.py
src/gvx/security/: __init__.py  verifier.py
src/gvx/tools/: executor.py  script.py
src/gvx/uv/: __init__.py  cache.py  config.py  downloader.py  lockfile.py  resolver.py
src/gvx/workspace/: __init__.py  discovery.py  manager.py
src/uvg/: __init__.py
src/uvg/auth/: config.py
src/uvg/cli/: __init__.py  export_import.py  main.py  workspace.py
src/uvg/core/: __init__.py  exceptions.py  models.py
src/uvg/intelligence/: __init__.py  scanner.py
src/uvg/python/: __init__.py
src/uvg/runtime/: __init__.py  builder.py  manifest.py
src/uvg/security/: __init__.py  verifier.py
src/uvg/store/: __init__.py  index.py  object.py  store.py
src/uvg/tools/: executor.py
src/uvg/uv/: __init__.py  cache.py  config.py  downloader.py  lockfile.py  resolver.py
src/uvg/workspace/: __init__.py  discovery.py  manager.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_benchmarks.py
tests/unit/: test_auth.py  test_exceptions.py  test_export_import.py  test_fingerprint.py  test_intelligence.py  test_manifest.py  test_models.py  test_python_manager.py  test_runtime_builder.py  test_security.py  test_store.py  test_store_object.py  test_tools.py  test_use_command.py  test_uv_cache.py  test_uv_config.py  test_uv_downloader.py  test_uv_lockfile.py  test_workspace.py  test_workspace_cli.py
